[gd_scene load_steps=10 format=3 uid="uid://8qmvbu3cteua"]

[ext_resource type="Script" uid="uid://by2dqynmybidp" path="res://Scenes/personajes/npc/Makarienne/makarienne.gd" id="1_3ertn"]
[ext_resource type="Texture2D" uid="uid://chh7ip054h3uc" path="res://Scenes/personajes/npc/Makarienne/Idle-Sheet.png" id="2_mv3gb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xxe7f"]
atlas = ExtResource("2_mv3gb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_68f56"]
atlas = ExtResource("2_mv3gb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xp8h"]
atlas = ExtResource("2_mv3gb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aovx8"]
atlas = ExtResource("2_mv3gb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ekpuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxe7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68f56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xp8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aovx8")
}],
"loop": true,
"name": &"idle_makarienne",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mv3gb"]
radius = 40.792156

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8vgkx"]
radius = 8.0
height = 28.0

[node name="Makarienne" type="CharacterBody2D"]
script = ExtResource("1_3ertn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(24.5, 24.5)
scale = Vector2(0.765625, 0.765625)
sprite_frames = SubResource("SpriteFrames_ekpuy")
animation = &"idle_makarienne"

[node name="speakArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="speakArea"]
position = Vector2(24, 37)
shape = SubResource("CircleShape2D_mv3gb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, 37)
shape = SubResource("CapsuleShape2D_8vgkx")

[connection signal="body_entered" from="speakArea" to="." method="_on_speak_area_body_entered"]
